Closed
Bug 396031
Opened 18 years ago
Closed 18 years ago
crash with jpg [@ ycck_cmyk_convert]
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: Peter6, Unassigned)
References
Details
(Keywords: crash)
Crash Data
Attachments
(3 files, 1 obsolete file)
222.21 KB,
image/jpeg
|
Details | |
87.76 KB,
image/jpeg
|
Details | |
3.18 KB,
patch
|
alfredkayser
:
review+
pavlov
:
superreview+
pavlov
:
approval1.9+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a8pre) Gecko/2007091207 Minefield/3.0a8pre ID:2007091207
repro:
load testcase
result:
while loading (wrong colors, but that's another thing) the image crashes FF
http://crash-stats.mozilla.com/report/index/b4c2f61e-61fc-11dc-99b2-001a4bd43e5c
0 ycck_cmyk_convert mozilla/jpeg/jdcolor.c:282
1 sep_upsample mozilla/jpeg/jdsample.c:131
2 process_data_simple_main mozilla/jpeg/jdmainct.c:369
3 jpeg_read_scanlines mozilla/jpeg/jdapistd.c:173
4 nsJPEGDecoder::OutputScanlines() mozilla/modules/libpr0n/decoders/jpeg/nsJPEGDecoder.cpp:577
5 nsJPEGDecoder::WriteFrom(nsIInputStream*, unsigned int, unsigned int*) mozilla/modules/libpr0n/decoders/jpeg/nsJPEGDecoder.cpp:455
6 imgRequest::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*, unsigned int, unsigned int) mozilla/modules/libpr0n/src/imgRequest.cpp:896
7 ProxyListener::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*, unsigned int, unsigned int) mozilla/modules/libpr0n/src/imgLoader.cpp:877
8 nsMediaDocumentStreamListener::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*, unsigned int, unsigned int) mozilla/content/html/document/src/nsMediaDocument.cpp:115
9 nsDocumentOpenInfo::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*, unsigned int, unsigned int) mozilla/uriloader/base/nsURILoader.cpp:306
10 nsBaseChannel::OnDataAvailable(nsIRequest*, nsISupports*, nsIInputStream*, unsigned int, unsigned int) mozilla/netwerk/base/src/nsBaseChannel.cpp:647
11 nsInputStreamPump::OnStateTransfer() mozilla/netwerk/base/src/nsInputStreamPump.cpp:508
12 nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream*) mozilla/netwerk/base/src/nsInputStreamPump.cpp:398
13 nsInputStreamReadyEvent::Run() mozilla/xpcom/io/nsStreamUtils.cpp:111
14 nsThread::ProcessNextEvent(int, int*) mozilla/xpcom/threads/nsThread.cpp:490
15 NS_ProcessNextEvent_P(nsIThread*, int) nsThreadUtils.cpp:227
16 nsBaseAppShell::Run() mozilla/widget/src/xpwidgets/nsBaseAppShell.cpp:154
17 nsAppStartup::Run() mozilla/toolkit/components/startup/src/nsAppStartup.cpp:170
18 XRE_main mozilla/toolkit/xre/nsAppRunner.cpp:3069
19 main mozilla/browser/app/nsBrowserApp.cpp:153
20 WinMain mozilla/browser/app/nsBrowserApp.cpp:166
21 __tmainCRTStartup crtexe.c:589
22 BaseProcessStart
Reporter | ||
Comment 1•18 years ago
|
||
Peter, the testcase attachment is broke "The image “https://bugzilla.mozilla.org/attachment.cgi?id=280738” cannot be displayed, because it contains errors."
Reporter | ||
Comment 3•18 years ago
|
||
ahhhh, just found out this depends on
gfx.color_management.enabled true
If it's set false you get your message.
(In reply to comment #3)
> ahhhh, just found out this depends on
> gfx.color_management.enabled true
> If it's set false you get your message.
>
Confirmed.
Reporter | ||
Updated•18 years ago
|
Comment 6•18 years ago
|
||
crash [caught by breakpad but doesn't appear to have been reported] with pref
set to true
error message with pref set to false
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a8pre) Gecko/2007091305
Minefield/3.0a8pre ID:2007091305
Updated•18 years ago
|
Component: GFX → ImageLib
QA Contact: general → imagelib
Attachment #280763 -
Attachment is obsolete: true
Attachment #280765 -
Flags: review?(alfredkayser)
Updated•18 years ago
|
Flags: blocking1.9?
Updated•18 years ago
|
Attachment #280765 -
Flags: review?(alfredkayser) → review+
Attachment #280765 -
Flags: superreview?(pavlov)
Updated•18 years ago
|
Flags: in-testsuite?
Updated•18 years ago
|
Attachment #280765 -
Flags: superreview?(pavlov) → superreview+
Comment on attachment 280765 [details] [diff] [review]
with black interpreted correctly
Fairly safe patch that only affects codepath for a relatively rare type of jpeg (CMYK/YCCK) and prevents a crash with same.
Attachment #280765 -
Flags: approval1.9?
Updated•18 years ago
|
Attachment #280765 -
Flags: approval1.9? → approval1.9+
Comment 11•18 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Assignee | ||
Updated•14 years ago
|
Crash Signature: [@ ycck_cmyk_convert]
You need to log in
before you can comment on or make changes to this bug.
Description
•