Bug 396031 - with color management on, ycck/cymk jpeg images crash. r=alfredkayser, sr+a=pavlov